--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="IQGalaxy – India’s top gamified learning app for children. Play-based learning, quizzes, puzzles, challenges and rewards to make education fun and effective for kids.">
     <meta name="google-adsense-account" content="ca-pub-8245878721230222">
-    <title>IQGalaxy</title>
+   
     <title>IQGalaxy – India’s Best Gamified Learning Platform for Kids | Fun + Smart Education</title>
-    <title>IQGalaxy – Gamified Learning App for Children | Learn with Games & Quizzes</title>
-    <title>IQGalaxy – Safe & Fun Learning Platform for Kids | Play-Based Education 2025</title>
-    <title>IQGalaxy – Kids Learning Platform with Games, Quizzes & Challenges</title>
+  
     <script src="https://js.puter.com/v2/"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8245878721230222"
      crossorigin="anonymous"></script>
